--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,323 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: "Source Code Pro", sans-serif;
+  line-height: 1.5;
+  text-align: left;
+}
+
+a {
+  text-decoration: none;
+  color: #f84646;
+  cursor: pointer;
+}
+
+button {
+  cursor: pointer;
+}
+
+.text {
+  color: #ffffff;
+}
+
+.top-header {
+  padding: 8px 0 0;
+}
+
+.top-header-left .social-list-box span {
+  font-weight: 600;
+  font-size: 15px;
+}
+.top-header-left .social-list-box .social-list li {
+  padding: 0 4px;
+}
+.top-header-left .social-list-box .social-list li a {
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.cart-box {
+  font-size: 0.9375rem;
+}
+.cart-box .cart-main img {
+  width: 20px;
+  margin-right: 10px;
+  border-style: none;
+}
+.cart-box .cart-main span {
+  color: #f84646;
+}
+
+.btn {
+  font-weight: 700;
+}
+
+.btn-sm {
+  padding: 0.04rem 1.1rem;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  border-radius: 0.2rem;
+}
+
+.btn-outline-primary {
+  color: #f84646;
+  background-color: transparent;
+  background-image: none;
+  border-color: #f84646;
+  border-radius: 0.2rem;
+}
+.btn-outline-primary:hover {
+  color: #ffffff;
+  background-color: #f84646;
+  border-color: #f84646;
+}
+
+.navbar {
+  padding: 0.25rem 1rem;
+}
+.navbar .navbar-brand {
+  padding-top: 0.265625rem;
+  padding-bottom: 0.265625rem;
+  font-size: 1.5625rem;
+  line-height: inherit;
+}
+.navbar .navbar-brand img {
+  width: 160px;
+  height: 100px;
+}
+
+.btn-add-pet {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.icon-box {
+  width: 50px;
+  height: 50px;
+  margin-left: 11px;
+  background-color: #f84646;
+  padding: 6px;
+  border-radius: 50%;
+}
+.icon-box i:before {
+  content: "\f067";
+}
+
+.nav-link {
+  color: #404040;
+  font-size: 15px;
+  transition: all 0.2s ease 0s;
+  text-transform: uppercase;
+}
+
+.red-boxes-section {
+  color: #ffffff;
+  font-size: 16px;
+}
+.red-boxes-section .r-box {
+  flex: 0 0 25%;
+  max-width: 25%;
+  padding: 6px 16px;
+  background-color: rgba(248, 70, 70, 0.85);
+  display: flex;
+  min-height: 100px;
+  align-items: center;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+.red-boxes-section .r-box .icon-box {
+  width: 70px;
+  height: 70px;
+  border: 1px solid #ffffff;
+  padding: 12px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 0 0 70px;
+}
+.red-boxes-section .r-box .text-box {
+  padding-left: 24px;
+}
+.red-boxes-section .r-box .r-box-title {
+  font-size: 22px;
+  text-transform: uppercase;
+  margin-top: -3px;
+  color: #ffffff;
+  text-decoration: none;
+}
+.red-boxes-section .r-box::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transform: rotate(-45deg) translate(-50%, -50%);
+  transform-origin: 0 0;
+  background: #f72d2d;
+  z-index: -1;
+  transition: all 0.2s ease 0s;
+  opacity: 0;
+}
+.red-boxes-section p {
+  margin-bottom: 0;
+  color: #ffffff;
+  font-size: 15px;
+}
+
+.search-pet-section {
+  padding: 47px 0;
+}
+
+.bg-box {
+  background: black;
+  border-radius: 8px;
+  padding: 20px;
+}
+.bg-box .form-title {
+  font-size: 30px;
+  font-weight: 300;
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.checkboxes {
+  padding: 10px 0;
+}
+
+.custom-checkbox {
+  padding-left: 40px;
+  font-size: 18px;
+  font-weight: 400;
+  white-space: nowrap;
+}
+.custom-checkbox input[type=radio] {
+  display: none;
+}
+.custom-checkbox input[type=radio] + .checkmark {
+  border-radius: 50%;
+}
+.custom-checkbox input[type=radio]:checked + .checkmark {
+  background-color: #f84646;
+  border: 1px solid #f84646;
+}
+.custom-checkbox .checkmark {
+  width: 24px;
+  height: 24px;
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 2px;
+  transition: all 0.2s ease 0s;
+}
+.custom-checkbox .checkmark::before {
+  content: "";
+  width: 8px;
+  height: 8px;
+  position: absolute;
+  top: 50%;
+  margin-top: -4px;
+  left: 50%;
+  margin-left: -4px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  transition: all 0.2s ease 0s;
+}
+
+.search-btn {
+  min-width: 187px;
+  height: 50px;
+  display: inline-block;
+  font-weight: 700;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.custom-search-button {
+  color: #ffffff;
+  background-color: #f84646;
+  border-color: #f84646;
+}
+.custom-search-button:hover {
+  background-color: orangered;
+  border: none;
+}
+
+.relocate-pet-section {
+  padding: 40px 0px;
+  box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.06);
+  background-image: url("../images/relocate-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top right;
+  min-height: 450px;
+  position: relative;
+  z-index: 1;
+}
+.relocate-pet-section .relocate-section-title {
+  font-size: 64px;
+  color: #232323;
+  margin-bottom: 75px;
+}
+.relocate-pet-section .relocate-section-title small {
+  font-size: 32px;
+  padding-left: 25px;
+}
+.relocate-pet-section .relocate-form-box {
+  max-width: 636px;
+}
+
+.relocate-form-box {
+  border-radius: 4px;
+}
+.relocate-form-box button {
+  background-color: #f84646;
+  border: none;
+}
+.relocate-form-box button:hover {
+  background-color: #f72d2d;
+}
+
+.featured-pets-section {
+  padding: 40px 0 20px;
+}
+
+.paw-title-box .paw-title {
+  font-size: 38px;
+  color: #414141;
+}
+.paw-title-box .paw-title .icon-box {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  max-width: 203px;
+  position: relative;
+}
+.paw-title-box .paw-title .icon-box:before {
+  content: "";
+  display: block;
+  width: calc(50% - 18px);
+  border-bottom: 1px dashed #414141;
+  opacity: 0.4;
+  left: 0;
+  bottom: 12px;
+  position: absolute;
 }
 
 /*# sourceMappingURL=styles.css.map */
