--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap');
+
 $primary-color: #f84646;
+$white-color: #ffffff;
+$orange-red-color: #f72d2d;
 
 *{
   margin: 0;
@@ -6,4 +10,334 @@ $primary-color: #f84646;
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Source Code Pro", sans-serif;
+  line-height: 1.5;
+  text-align: left;
+}
 
+a {
+  text-decoration: none;
+  color: $primary-color;
+  cursor: pointer;
+}
+
+button{
+  cursor: pointer;
+}
+
+.text{
+  color: $white-color;
+}
+
+.top-header {
+  padding: 8px 0 0;
+}
+
+.top-header-left {
+  .social-list-box {
+    span {
+      font-weight: 600;
+      font-size: 15px;
+    }
+    .social-list{
+      li {
+        padding: 0 4px;
+        a{
+          color: rgba(0, 0, 0, 0.8);
+        }
+      }
+    }
+  }
+}
+
+.cart-box {
+  font-size: 0.9375rem;
+  .cart-main {
+    img {
+      width: 20px;
+      margin-right: 10px;
+      border-style: none;
+    }
+    span{
+      color: $primary-color;
+    }
+  }
+}
+
+.btn {
+  font-weight: 700;
+}
+
+.btn-sm {
+  padding: 0.04rem 1.1rem;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  border-radius: 0.2rem;
+}
+
+.btn-outline-primary {
+  color: $primary-color;
+  background-color: transparent;
+  background-image: none;
+  border-color: $primary-color;
+  border-radius: 0.2rem;
+  &:hover{
+    color: $white-color;
+    background-color: $primary-color;
+    border-color: $primary-color;
+  }
+}
+
+.navbar{
+  padding: 0.25rem 1rem;
+  .navbar-brand{
+    padding-top: 0.265625rem;
+    padding-bottom: 0.265625rem;
+    font-size: 1.5625rem;
+    line-height: inherit;
+    img {
+      width: 160px;
+      height: 100px;
+    }
+  }
+}
+
+.btn-add-pet {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.icon-box {
+  width: 50px;
+  height: 50px;
+  margin-left: 11px;
+  background-color: $primary-color;
+  padding: 6px;
+  border-radius: 50%;
+  i{
+    &:before{
+      content:"\f067"
+    }
+  }
+}
+
+.nav-link{
+  color: #404040;
+  font-size: 15px;
+  transition: all 0.2s ease 0s;
+  text-transform: uppercase;
+}
+
+.red-boxes-section{
+  color: $white-color;
+  font-size: 16px;
+  .r-box{
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding: 6px 16px;
+    background-color: rgba(248, 70, 70, 0.85);
+    display: flex;
+    min-height: 100px;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    .icon-box{
+      width: 70px;
+      height: 70px;
+      border: 1px solid $white-color;
+      padding: 12px;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex: 0 0 70px;
+    }
+    .text-box{
+      padding-left: 24px;
+    }
+    .r-box-title{
+      font-size: 22px;
+      text-transform: uppercase;
+      margin-top: -3px;
+      color: $white-color;
+      text-decoration: none;
+    }
+    &::before{
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      transform: rotate(-45deg) translate(-50%, -50%);
+      transform-origin: 0 0;
+      background: $orange-red-color;
+      z-index: -1;
+      transition: all 0.2s ease 0s;
+      opacity: 0;
+    }
+  }
+  p{
+    margin-bottom: 0;
+    color: $white-color;
+    font-size: 15px;
+  }
+}
+
+.search-pet-section {
+  padding: 47px 0;
+}
+
+.bg-box{
+  background: black;
+  border-radius: 8px;
+  padding: 20px;
+  .form-title{
+    font-size: 30px;
+    font-weight: 300;
+    color: $white-color;
+    text-align: center;
+    margin-bottom: 24px;
+  }
+}
+
+.checkboxes{
+  padding: 10px 0;
+}
+
+.custom-checkbox{
+  padding-left: 40px;
+  font-size: 18px;
+  font-weight: 400;
+  white-space: nowrap;
+  input[type="radio"] {
+    display: none;
+    + .checkmark {
+      border-radius: 50%;
+    }
+    &:checked {
+      + .checkmark{
+        background-color: $primary-color;
+        border: 1px solid $primary-color;
+      }
+    }
+  }
+  .checkmark{
+    width: 24px;
+    height: 24px;
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 2px;
+    transition: all 0.2s ease 0s;
+    &::before{
+      content: "";
+      width: 8px;
+      height: 8px;
+      position: absolute;
+      top: 50%;
+      margin-top: -4px;
+      left: 50%;
+      margin-left: -4px;
+      border-radius: 50%;
+      background-color: $white-color;
+      //opacity: 0;
+      transition: all 0.2s ease 0s;
+    }
+  }
+}
+
+.search-btn{
+  min-width: 187px;
+  height: 50px;
+  display: inline-block;
+  font-weight: 700;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.custom-search-button{
+  color: $white-color;
+  background-color: $primary-color;
+  border-color: $primary-color;
+  &:hover{
+    background-color: orangered;
+    border: none;
+  }
+}
+
+
+.relocate-pet-section{
+  padding: 40px 0px;
+  box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.06);
+  background-image: url("../images/relocate-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top right;
+  min-height: 450px;
+  position: relative;
+  z-index: 1;
+  .relocate-section-title{
+    font-size: 64px;
+    color: #232323;
+    margin-bottom: 75px;
+    small{
+      font-size: 32px;
+      padding-left: 25px;
+    }
+  }
+  .relocate-form-box{
+    max-width: 636px;
+  }
+}
+
+.relocate-form-box{
+  border-radius: 4px;
+  button{
+    background-color: $primary-color;
+    border: none;
+    &:hover{
+      background-color: $orange-red-color;
+    }
+  }
+}
+
+.featured-pets-section{
+  padding: 40px 0 20px;
+}
+
+.paw-title-box{
+  .paw-title{
+    font-size: 38px;
+    color: #414141;
+    .icon-box{
+      display: block;
+      width: 100%;
+      height: 100%;
+      margin: 0 auto;
+      //margin-top: 0px;
+      //margin-top: -8px;
+      max-width: 203px;
+      position: relative;
+      &:before{
+        content: "";
+        display: block;
+        width: calc(50% - 18px);
+        border-bottom: 1px dashed #414141;
+        opacity: 0.4;
+        left: 0;
+        bottom: 12px;
+        position: absolute;
+      }
+    }
+  }
+}
