--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -296,12 +296,20 @@ button {
 .featured-pets-section {
   padding: 40px 0 20px;
 }
+.featured-pets-section .featured-slider-controls {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  margin-top: -101px;
+  z-index: 3;
+}
 
 .paw-title-box .paw-title {
   font-size: 38px;
   color: #414141;
 }
-.paw-title-box .paw-title .icon-box {
+.paw-title-box .paw-title .featured-pets-icon-box {
   display: block;
   width: 100%;
   height: 100%;
@@ -309,7 +317,7 @@ button {
   max-width: 203px;
   position: relative;
 }
-.paw-title-box .paw-title .icon-box:before {
+.paw-title-box .paw-title .featured-pets-icon-box:before {
   content: "";
   display: block;
   width: calc(50% - 18px);
@@ -318,6 +326,336 @@ button {
   left: 0;
   bottom: 12px;
   position: absolute;
+}
+.paw-title-box .paw-title .featured-pets-icon-box:after {
+  content: "";
+  display: block;
+  width: calc(50% - 18px);
+  border-bottom: 1px dashed #414141;
+  opacity: 0.4;
+  right: 0;
+  bottom: 12px;
+  position: absolute;
+}
+.paw-title-box .paw-title img {
+  width: 28px;
+  height: 27px;
+  fill: #f84646;
+}
+
+.categories-banner-section {
+  padding: 40px 0 20px;
+}
+.categories-banner-section [class^=col-] {
+  margin-bottom: 30px;
+}
+
+.categories-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
+.bg-pet-home {
+  background-color: #82b1ff !important;
+}
+
+.categoies-banner-card {
+  min-height: 185px;
+  padding: 20px;
+  transition: all 0.2s ease 0s;
+}
+.categoies-banner-card .category-icon {
+  position: absolute;
+  content: "";
+  right: 0;
+  bottom: 0;
+  max-width: 42%;
+  max-height: 90%;
+}
+
+.bg-best-food {
+  background-color: #ec82ff !important;
+}
+
+.bg-pet-toys {
+  background-color: #5de88b !important;
+}
+
+.bg-bags {
+  background-color: #e8bc5d !important;
+}
+
+.bg-pet-cage {
+  background-color: #fa8b8b !important;
+}
+
+.bg-medicine {
+  background-color: #30b1ad !important;
+}
+
+.search-map-section {
+  z-index: 3;
+  position: relative;
+  height: 450px;
+  padding: 0 15px;
+  display: flex;
+  align-items: center;
+}
+.search-map-section::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 2;
+}
+.search-map-section .contact-form {
+  position: relative;
+  z-index: 3;
+  max-width: 900px;
+  flex: 0 1 900px;
+  padding: 40px 30px;
+  margin: 0 auto;
+  background-color: white;
+  border-radius: 4px;
+}
+.search-map-section .contact-form-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 36px;
+}
+.search-map-section .search-form {
+  display: flex;
+  align-items: center;
+  margin: 0px -7px;
+}
+.search-map-section .search-form .col-box {
+  flex: 1 1 auto;
+  padding: 0 7px;
+  margin-bottom: 15px;
+}
+.search-map-section .search-form .col-box .text {
+  color: black;
+}
+.search-map-section .search-form .form-group {
+  margin-bottom: 0;
+}
+.search-map-section iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  content: "";
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.custom-checkbox {
+  position: relative;
+  padding-left: 40px;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: 400;
+  white-space: nowrap;
+}
+
+.has-float-label {
+  overflow: hidden;
+  text-align: left;
+}
+.has-float-label .form-control {
+  padding-top: 15px;
+}
+
+.buttons-box .btn-primary {
+  min-width: 97px;
+  height: 50px;
+  display: inline-block;
+  font-weight: 700;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  font-size: 16px;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  background-color: #f84646;
+  text-transform: uppercase;
+}
+
+.about-section {
+  padding: 40px 0;
+  background: #ffffff;
+}
+.about-section .about-us-row {
+  flex-wrap: nowrap;
+  line-height: 38px;
+}
+.about-section .btn-box {
+  margin-top: 52px;
+}
+.about-section .btn {
+  min-width: 187px;
+  text-transform: uppercase;
+}
+.about-section .btn-primary {
+  color: #fff;
+  background-color: #f84646;
+  border-color: #f84646;
+}
+
+.popular-pets-section {
+  padding: 40px 0;
+  text-align: center;
+  font-size: 27px;
+  font-weight: 600;
+}
+.popular-pets-section .popular-pets-list {
+  display: flex;
+  margin: 0px -8px;
+  flex-wrap: wrap;
+}
+.popular-pets-section .popular-pets-list a {
+  text-decoration: none;
+}
+.popular-pets-section .icon-box {
+  width: 175px;
+  height: 171px;
+  border: 1px dashed #f84646;
+  padding: 20px 10px;
+  margin: 0 auto;
+  border-radius: 50%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+}
+.popular-pets-section .total-count {
+  margin-top: 8px;
+  color: black;
+}
+
+.footer {
+  background-color: #323232;
+  padding: 35px 0 0;
+  color: white;
+  font-size: 18px;
+}
+.footer .logo-box {
+  margin-bottom: 20px;
+}
+.footer p {
+  font-size: 14px;
+  line-height: 1.7;
+}
+.footer .social-list-box .footer-social-list li {
+  padding: 0 4px;
+  margin-bottom: 8px;
+}
+.footer .social-list-box .footer-social-list li a {
+  color: #ffffff;
+  text-decoration: none;
+}
+.footer .section-title .list-title {
+  margin-bottom: 12px;
+}
+.footer .menu-list {
+  margin-bottom: 35px;
+}
+.footer .menu-list a {
+  font-size: 1.125rem;
+  opacity: 0.6;
+  padding: 3px 0;
+  display: block;
+  text-decoration: none;
+}
+.footer a {
+  color: white;
+  transition: all 0.2s ease 0s;
+  text-decoration: none;
+}
+.footer .copyright-box {
+  text-align: right;
+}
+.footer .small-link-list {
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  margin-right: -15px;
+}
+.footer .small-link-list li {
+  position: relative;
+}
+.footer .small-link-list li a {
+  padding: 0 16px;
+  font-size: 0.8125rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  text-decoration: none;
+}
+.footer .small-link-list li:after {
+  content: "|";
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.footer-input-group {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 100%;
+}
+.footer-input-group .form-control {
+  height: 43px;
+  border-radius: 20px;
+  font-size: 16px !important;
+  line-height: 1.2;
+}
+
+.input-group-append {
+  margin-left: -1px;
+}
+
+.footer-input-group .btn {
+  height: 43px;
+  border-radius: 20px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+.btn-outline-white {
+  color: #ffffff;
+  background-color: transparent;
+  background-image: none;
+  border-color: #ffffff;
+}
+
+.footer-social-list {
+  display: flex;
+  align-items: center;
+  margin: 0 auto 0 0;
+  font-weight: 600;
+  flex-wrap: wrap;
 }
 
 /*# sourceMappingURL=styles.css.map */
