--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -728,6 +728,77 @@ button {
           box-shadow: inset 0 3px 0 rgba(0, 0, 0, 0.2);
 }
 
+.button-social {
+  padding-left: 64px;
+  position: relative;
+  z-index: 1;
+}
+
+.button-social .fa {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 50px;
+  height: 100%;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.1);
+  line-height: 3.2;
+  border-radius: 5px 0 0 5px;
+}
+
+.button-facebook {
+  background-color: #3b5897;
+}
+
+.button-twitter {
+  background-color: #53abee;
+}
+
+.button-google {
+  background-color: #de4e3b;
+}
+
+.button-linkedin {
+  background-color: #00a1db;
+}
+
+/*--------------------
+Form
+--------------------*/
+.signup-form fieldset {
+  border: none;
+  padding: 0;
+  margin: 20px 0;
+  position: relative;
+}
+
+.signup-form fieldset input {
+  width: 100%;
+  height: 48px;
+  color: #333333;
+  padding: 15px 40px 15px 15px;
+  border-radius: 5px;
+  font-size: 14px;
+  outline: none !important;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2);
+          box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2);
+  vertical-align: top;
+}
+
+.button-submit {
+  width: 100%;
+  outline: none !important;
+  background: linear-gradient(-5deg, #79b52c, #94d63d);
+  border: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  -webkit-box-shadow: 0 3px 0px rgba(115, 136, 89, 0.2);
+          box-shadow: 0 3px 0px rgba(115, 136, 89, 0.2);
+  text-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+}
+
 .signup {
   position: absolute;
   top: 50%;
@@ -744,6 +815,56 @@ button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.signup-connect,
+.signup-classic {
+  width: 50%;
+  padding: 30px 50px;
+}
+
+.signup-connect {
+  background: linear-gradient(134deg, #fbce50, #e08106);
+  color: white;
+}
+
+.signup-connect h1 {
+  font-size: 30px;
+  margin-top: 10px;
+  margin-bottom: 40px;
+  text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+}
+
+.signup-classic h2 {
+  font-size: 16px;
+  font-weight: normal;
+  margin-top: 23px;
+  margin-bottom: 43px;
+  text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+}
+
+.signup-classic fieldset::after {
+  content: '\f007';
+  font-family: FontAwesome;
+  position: absolute;
+  right: 15px;
+  top: 17px;
+  z-index: 2;
+  width: 20px;
+  color: rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.signup-classic fieldset.email::after {
+  content: '\f0e0';
+}
+
+.signup-classic fieldset.password::after {
+  content: '\f023';
+}
+
+.margintop-footer {
+  margin-top: 260px;
 }
 
 .footer {
