--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1065,9 +1065,10 @@ div{
   border-radius: 6px;
   overflow: hidden;
   border: 1px solid rgba(0, 0, 0, 0.14);
-  // height: 100%; container issue 
-  height: 1580px; 
+  height: 100%; 
+  // height: 1580px; 
   padding-bottom: 15px;
+  margin-top: 10px;
 }
 .filter-sidebar .sidebar-header {
   display: flex;
@@ -1376,6 +1377,7 @@ h6 {
   border-radius: 6px;
   padding: 10px 24px;
   margin-bottom: 12px;
+  margin-top: 10px;
   .pets-list-header {
     display: flex;
     align-items: center;
@@ -1783,6 +1785,7 @@ ul{
   padding-left: 0;
   list-style: none;
   border-radius: 0.25rem;
+  padding-top: 10px;
 }
 li{
   display: list-item;
